# xiaomi_mace_classifier

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/gdut/bsx/tensorflowtraining/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/model/: saved_model.pb  srdense_S3D3C6G16G032B32_noskip.pb  srmini_S3D1C3G8G08.pb
app/src/main/java/gdut/bsx/tensorflowtraining/: BiCubicInterpolationScale.java  BitmapUtils.java  ContextMenuDialog.java  ItemAdapter.java  MainActivity.java  OpenCVUtil.java  SpeedTestActivity.java  TestActivity.java
app/src/main/java/gdut/bsx/tensorflowtraining/ternsorflow/: Classifier.java  TensorFlowImageClassifier.java  TensorFlowSuImageClassifier.java
app/src/main/res/layout/: activity_speed_test.xml  activity_test.xml
macelibrary/: CMakeLists.txt  build.gradle
macelibrary/src/main/cpp/: image_classify.cc  image_classify.h
macelibrary/src/main/cpp/include/mace/public/: mace_engine_factory.h  wangsu_v1.h
macelibrary/src/main/cpp/opencv/: native-lib.cpp  thread_event.cc  thread_event.h
macelibrary/src/main/java/com/xiaomi/mace/: AppModel.java  InitData.java  JniMaceUtils.java
